[project]
name = "squarecloud-blob"
version = "0.1.0"
description = "Square Cloud blob wrapper"
authors = [
    {name = "Jhonatan-Jeferson",email = "jhonatanjefersonoliveira@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)"
]

[tool.poetry]
packages = [{from = "src", include = "squarecloudblob"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
